name: here
version: 1.2.1
synopsis: Here docs & interpolated strings via quasiquotation
description: Here docs & interpolated strings via quasiquotation
license: BSD3
license-file: LICENSE
author: Taylor M. Hedberg
maintainer: t@tmh.cc
copyright: ©2013 Taylor M. Hedberg
homepage: https://github.com/tmhedberg/here
category: Data
build-type: Simple
cabal-version: >=1.8

source-repository head
  type: git
  location: git://github.com/tmhedberg/here.git

library
  hs-source-dirs: src
  exposed-modules:
    Data.String.Here,
    Data.String.Here.Interpolated,
    Data.String.Here.Uninterpolated
  other-modules:
    Data.String.Here.Internal
  build-depends:
    base >= 4.5 && < 4.7,
    haskell-src-meta ==0.6.*,
    lens >= 3.8 && < 3.10,
    mtl ==2.1.*,
    parsec ==3.1.*,
    template-haskell
  ghc-options: -Wall
