name: here
version: 1.2.9
synopsis: Here docs & interpolated strings via quasiquotation
description: Here docs & interpolated strings via quasiquotation
license: BSD3
license-file: LICENSE
author: Taylor M. Hedberg
maintainer: t@tmh.cc
copyright: ©2013 Taylor M. Hedberg, ©2014 Google Inc.
homepage: https://github.com/tmhedberg/here
category: Data
build-type: Simple
cabal-version: >=1.8

source-repository head
  type: git
  location: git://github.com/tmhedberg/here.git

library
  hs-source-dirs: src
  exposed-modules:
    Data.String.Here,
    Data.String.Here.Interpolated,
    Data.String.Here.Uninterpolated
  other-modules:
    Data.String.Here.Internal
  build-depends:
    base >= 4.5 && < 4.10,
    haskell-src-meta >= 0.6 && < 0.8,
    mtl >=2.1 && < 2.3,
    parsec ==3.1.*,
    template-haskell
  ghc-options: -Wall
