name: here
version: 1.2.14
synopsis: Here docs & interpolated strings via quasiquotation
description: Here docs & interpolated strings via quasiquotation
license: BSD3
license-file: LICENSE
author: Taylor M. Hedberg
maintainer: t@tmh.cc
copyright: ©2013 Taylor M. Hedberg, ©2014 Google Inc.
homepage: https://github.com/tmhedberg/here
category: Data
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/tmhedberg/here.git

library
  hs-source-dirs: src
  exposed-modules:
    Data.String.Here,
    Data.String.Here.Interpolated,
    Data.String.Here.Uninterpolated
  other-modules:
    Data.String.Here.Internal
  build-depends:
    base >= 4.5 && < 5,
    haskell-src-meta >= 0.6 && < 0.9,
    mtl >=2.1 && < 2.4,
    parsec ==3.1.*,
    template-haskell
  ghc-options: -Wall
  default-language: Haskell2010

test-suite here-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    base >=4.5 && <5,
    here,
    hspec,
    bytestring,
    text
  other-modules:
    Data.String.HereSpec
  default-language: Haskell2010
